5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1635_2703.log
== SUBMITION (2019-04-15 13:55:07) 
-- CODE:
i =(input("Digite um numero                                                                                                                                                                                                                                                                                                                                                                                                     num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

			
-- EXECUTION TIME:
0.186902
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if (num % 2 == 0):
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:16) 
-- CODE:
i =(input("Digite um numero                                                                                                                                                                                                                                                                                                                                                                                                     num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.301013
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if (num % 2 == 0):
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:16) 
-- CODE:
i =(input("Digite um numero                                                                                                                                                                                                                                                                                                                                                                                                     num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.157972
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if (num % 2 == 0):
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:23) 
-- CODE:
i =(input("Digite um numero                                                                                                                                                                                                                                                                                                                                                                                                     num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.223535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 3, in <module>
    if (num % 2 == 0):
NameError: name 'num' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:39) 
-- CODE:
i =(input("Digite um numero"                                                                                                                                                                                                                                                                                                                                                                                                     num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.255444
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 1
    i =(input("Digite um numero"                                                                                                                                                                                                                                                                                                                                                                                                     num = int(input())
                                                                                                                                                                                                                                                                                                                                                                                                                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:51) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.111023
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
impar
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
impar
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:57) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.199784
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
impar
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
impar
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
impar
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:57) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.192286
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
impar
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
impar
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
impar
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:58) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.228224
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
impar
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
impar
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
impar
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:58) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.242388
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2703/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:58) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.297255
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
par
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
impar
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:58) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.387573
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
impar
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:

-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:58) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
   mensagem = "par"
else:
   mensagem = "impar"

print(mensagem)

-- EXECUTION TIME:
0.507653
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
impar
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
par
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:22) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.1344
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:25) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.13666
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:26) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.22626
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:27) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.289434
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:27) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.26804
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:27) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.340665
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:27) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.455258
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:27) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.468821
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1635/2703/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:28) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)

-- EXECUTION TIME:
0.36846
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:31) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)
-- EXECUTION TIME:
0.221556
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:36) 
-- CODE:
num=int(input("idade?"))

if( num =18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)
-- EXECUTION TIME:
0.225414
-- ERROR:
  File "/home/codebench/codes/1635/2703/main.py", line 3
    if( num =18):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:55) 
-- CODE:
num=int(input("idade?"))

if( num >=18):
   mensagem="eleitor"
else:
	mensagem="nao_eleitor"

print(mensagem)
-- EXECUTION TIME:
0.142132
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
